src/objects/Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article Archived</fullName>
                </value>
                <value>
                    <fullName>Article Updated</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Created_Date__c</fullName>
        <label>Article Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Article_Feed_Update__c</fullName>
        <inlineHelpText>The contents of this field will appear in the Article feed internally AND in the Community if the Article is shared in a Community.</inlineHelpText>
        <label>Article Feed Update</label>
        <length>4500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Version__c</fullName>
        <label>Article Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Communities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <formula>Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Version_Id__c</fullName>
        <inlineHelpText>Id from the corresponding KnowledgeArticleVersion</inlineHelpText>
        <label>Knowledge Article Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Published_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedback_Published</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Published_Date__c</fullName>
        <label>Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_FeedItem__c</fullName>
        <label>Parent FeedItem</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feedback_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Last_Published_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Backlogged_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>Backlogged Feedback</label>
    </listViews>
    <listViews>
        <fullName>My_Feedback_All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Feedback - All</label>
    </listViews>
    <listViews>
        <fullName>My_Feedback_Open</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Feedback - Open</label>
    </listViews>
    <listViews>
        <fullName>New_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>New Feedback</label>
    </listViews>
    <nameField>
        <label>Article Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Articles Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>